# programming

./: README.md
array-args-f90-vs-c/: README.md  cfunc.c  cfunc.h  driver.c  ffunc.f90  makefile
blas-lapack-benchmark/: .bash_history  README.md  make.blas-lapack.inc  make.gfortran-mkl.inc  make.ifort-mkl.inc  make.openblas.inc  makefile  perf_dgemm.f90  perf_dgesvd.f90
cpp-omp-gpu-offload/: README.md
cpp-omp-gpu-offload/jacobi/: .bash_history  RESULTS  jacobi-update-cuda.cu  jacobi-update-cuda.h  jacobi.cpp  makefile
cpp-omp-gpu-offload/saxpy/: makefile  saxpy.cpp
cpp-omp-gpu-offload/utils/: lscuda.cpp  lsdev.cpp  ondev.cpp
cpp-parallel-standard-library/: README.md
cpp-parallel-standard-library/jacobi/: jacobi.cpp  jacobi_check.py  makefile
cpp-parallel-standard-library/saxpy/: README.md  makefile  saxpy.cpp
cuda-streams/: README.md  makefile  test-kernel.cu  test-kernel.py  test-streams.cu  test-streams.py  test-utils-cuda.cu  test-utils-cuda.h  test-utils.cpp  test-utils.h
distributed-rng/: README.md  makefile  rng.m  vsl_mc.c
fast-intrinsics-funcs/: README.md  demo.f90
fftw-benchmark/: README.md  fftw3-macros.h  fftw3.c  fftw3.m  fftw3_aux.c  fftw3_aux.h  fftw3s.c  makefile
gpu-mem/: README.md  gpu-mem-common.cu  gpu-mem-common.h  gpu-mem-heterogeneous.cu  gpu-mem-separate.cu  gpu-mem-unified.cu  makefile
gpu-mem-fill/: gpumemfill.cu
heat/: README.md
heat/1D/: heat.c  heat_mpi.c  heat_omp.c  makefile
heat/2D/: heat.c  heat_mpi.c  heat_mpi_XY_PARTITION.c  makefile
heat/3D/: heat.c  heat__memalign.c  heat_mpi-omp-hybrid.c  heat_mpi__isend_irecv.c  heat_mpi__send_recv.c  heat_mpi__sendrecv.c  heat_omp.c  makefile
heat/cpp-stl/: README.md  heat_1d.cpp  heat_1d_omp.c  heat_3d.cpp  heat_3d_omp.c  iterator.hpp
heat/docs/: heat.tex  heat.txt
heat/matlab/: heat1D.m  heat2D.m  heat3D.m
heat/python/: README.md  heat.py
heat/python/src/: cython_stepper.c
jacobi-python-mpi4py/: README.md  jacobi_mpi.py  jacobi_ref.py
loop-vectorisation/: README.md  RESULTS  loops.cpp  loops.vectors.cpp  make.gcc  make.intel  make.llvm  makefile
mem-aligmnent/: align  align.cpp  align.cpp~
mpi-dynamic-process/: child.c  parent.c  run-parent.slurm
mpi-ring/: README.md  ring_mpi.F90  ring_mpi.c
ndim-c-array-alloc/: README.md
omp-gpu-offload/: README.md  makefile  omp_loop_offload.c  omp_loop_offload_map_alloc.c  omp_loop_offload_metadirective.c
print-affinity/: CMakeLists.txt  README.md  makefile  paff.c  paff_utils.cu  paff_utils.h
reaction-diffusion/: README.md
reaction-diffusion/config/: coral.in  default.in  fingers.in  flower.in  spiral.in  spots.in
reaction-diffusion/cupy/: README.md  rd.py
reaction-diffusion/python/: rdPlot.py
reaction-diffusion/src/: CMakeLists.txt  makefile  mapRGB.hpp  rd.cpp  rd.hpp  rdGL.cpp  renderer.cpp  renderer.hpp  solution.cpp  solution.hpp  timer.cpp  timer.hpp
rust/mandelbrot/: Cargo.toml
rust/mandelbrot/src/: main.rs  mb_inp.rs  mb_out.rs  mb_tools.rs
shmem_read_write/: README.md  makefile  shm_read.c  shm_read_write.h  shm_write.c
simple-mpi-cuda/: CMakeLists.txt  README.md  simple-cuda.cu  simple-mpi-cuda.hpp  simple-mpi.cpp
simple-mpi-cuda/cpp/: simple-cuda.cu
simple-mpi-cuda/python/: simple-mpi4py-cupy.py
